--- a/index.html
+++ b/index.html
@@ -1,16 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/bootstrap-5.0.0-beta3-dist/bootstrap-5.0.0-beta3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet"
+    href="./assets/styles/bootstrap-5.0.0-beta3-dist/bootstrap-5.0.0-beta3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./main.css">
   <title>NineStars</title>
 </head>
+
 <body>
   <div class="contaier-fluid bg-primary">
-    Welcome to our first Group Boostrap Project
+    <!-- Welcome to our first Group Boostrap Project -->
   </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <div class="container">
+      <a class="navbar-brand fs-1 text-white" href="#">Ninestars</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link  pt-4 text-white" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link pt-4 text-white" href="#about">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link pt-4 text-white" href="#contacts">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link pt-4 text-white" href="#contacts">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link pt-4 text-white" href="#contacts">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link pt-4 text-white" href="#contacts">Testimonial</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link pt-4 text-white" href="#contacts">Contact</a>
+          </li>
+        </ul>
+        <div class="pt-3">
+          <button type="button" class="btn btn-warning ">Get Started</button>
+        </div>
+  </nav>
+  <!-- nav ends -->
+
+  <!-- landing page -->
+  <div class="pt-5 mt-5 container-fluid px-5 ">
+    <div class="row">
+      <!-- <div class="col lp-content"> -->
+
+      <div class="col-md-6">
+        <p class="better">
+          Better digital<br>experience with<br>Ninestars<br>
+        </p>
+        <p class="fs-2">We are a team of talented designers making<br>Website with bootstrap<br>
+        </p>
+        <button type="button" class="btn btn-warning mt-3 fs-5 ">Get Started</button>
+      </div>
+      <div class="col-md-6">
+        <img src="./assets/img/hero-img.svg" alt="" class="w-100 image">
+      </div>
+    </div>
+
+
+  </div>
+  <!-- <div class="container-fluid">
+  <div class="row">
+<div class="col-md-6">
+
+  <p class= "better">
+    Better digital<br>experience with<br>Ninestars<br>
+  </p>
+  <p class= "better">
+    Better digital<br>experience with<br>Ninestars<br>
+  </p>
+  <button class="btn btn-lg btn-danger">hello</button>
+</div>
+<div class="col-md-6">
+
+  <p class= "better">
+    Better digital<br>experience with<br>Ninestars<br>
+  </p>
+  <p class= "better">
+    Better digital<br>experience with<br>Ninestars<br>
+  </p>
+  <button class="btn btn-lg btn-danger">hello</button>
+</div>
+  </div>
+</div> -->
+  <div class="container d-flex img-div pt-5 mt-5 ">
+    <div class="row">
+      <div class="img-div col-12 col-md-6">
+        <img src="./assets/img/about-imdg.svg " alt="" class="w-75">
+      </div>
+      <div class="col-12 col-md-6">
+
+        <div class="volu">
+          Voluptatem dignissimos<br> provident quasi<br></div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br> tempor incididunt ut labore et
+          dolore magna aliqua. Duis aute irure dolor in <br>reprehenderit
+        </p>
+        <div class="row">
+          <div class="col-md-6">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="orange"
+              class="bi bi-file-earmark-text " viewBox="0 0 16 16">
+              <path
+                d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z" />
+              <path
+                d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z" />
+            </svg>
+            <p class="fw-bold fs-4">
+              Corporis voluptates sit<br></p>
+            <p> Consequuntur sunt aut quasi enim <br>aliquam quae harum pariatur laboris<br> nisi ut aliquip</br>
+            </p>
+          </div>
+          <div class="col-md-6">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="orange" class="bi bi-box"
+              viewBox="0 0 16 16">
+              <path
+                d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+            </svg>
+            <p class="fw-bold fs-4">
+              Ullamco laboris nisi<br></p>
+            <p> Excepteur sint occaecat cupidatat<br> non proident, sunt in culpa qui officia<br> deserunt</br>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- end of first section -->
+
+  <!-- sevices section -->
+  <div class=" container-fluid pt-5 mt-5 color ">
+    <p class="fs-2 text-center text-secondary">Services</p>
+    <h1 class="text-center">Check out the great services we offer</h1>
+    <p class="text-center text-warning">_________</p>
+    <div class="row">
+      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate " data-aos="zoom-in" data-aos-delay="100">
+        <div class="card rounded p-3">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="orange" class="bi bi-globe2 "
+              viewBox="0 0 16 16">
+              <path
+                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm7.5-6.923c-.67.204-1.335.82-1.887 1.855-.143.268-.276.56-.395.872.705.157 1.472.257 2.282.287V1.077zM4.249 3.539c.142-.384.304-.744.481-1.078a6.7 6.7 0 0 1 .597-.933A7.01 7.01 0 0 0 3.051 3.05c.362.184.763.349 1.198.49zM3.509 7.5c.036-1.07.188-2.087.436-3.008a9.124 9.124 0 0 1-1.565-.667A6.964 6.964 0 0 0 1.018 7.5h2.49zm1.4-2.741a12.344 12.344 0 0 0-.4 2.741H7.5V5.091c-.91-.03-1.783-.145-2.591-.332zM8.5 5.09V7.5h2.99a12.342 12.342 0 0 0-.399-2.741c-.808.187-1.681.301-2.591.332zM4.51 8.5c.035.987.176 1.914.399 2.741A13.612 13.612 0 0 1 7.5 10.91V8.5H4.51zm3.99 0v2.409c.91.03 1.783.145 2.591.332.223-.827.364-1.754.4-2.741H8.5zm-3.282 3.696c.12.312.252.604.395.872.552 1.035 1.218 1.65 1.887 1.855V11.91c-.81.03-1.577.13-2.282.287zm.11 2.276a6.696 6.696 0 0 1-.598-.933 8.853 8.853 0 0 1-.481-1.079 8.38 8.38 0 0 0-1.198.49 7.01 7.01 0 0 0 2.276 1.522zm-1.383-2.964A13.36 13.36 0 0 1 3.508 8.5h-2.49a6.963 6.963 0 0 0 1.362 3.675c.47-.258.995-.482 1.565-.667zm6.728 2.964a7.009 7.009 0 0 0 2.275-1.521 8.376 8.376 0 0 0-1.197-.49 8.853 8.853 0 0 1-.481 1.078 6.688 6.688 0 0 1-.597.933zM8.5 11.909v3.014c.67-.204 1.335-.82 1.887-1.855.143-.268.276-.56.395-.872A12.63 12.63 0 0 0 8.5 11.91zm3.555-.401c.57.185 1.095.409 1.565.667A6.963 6.963 0 0 0 14.982 8.5h-2.49a13.36 13.36 0 0 1-.437 3.008zM14.982 7.5a6.963 6.963 0 0 0-1.362-3.675c-.47.258-.995.482-1.565.667.248.92.4 1.938.437 3.008h2.49zM11.27 2.461c.177.334.339.694.482 1.078a8.368 8.368 0 0 0 1.196-.49 7.01 7.01 0 0 0-2.275-1.52c.218.283.418.597.597.932zm-.488 1.343a7.765 7.765 0 0 0-.395-.872C9.835 1.897 9.17 1.282 8.5 1.077V4.09c.81-.03 1.577-.13 2.282-.287z" />
+            </svg>
+            <h4 class="text-dark">Lorem Ipsum</h4>
+            <p class="description">Voluptatum deleniti atque<br> corrupti quos dolores et <br>quas molestias
+              excepturi<br> sint occaecati cupiditate</br></p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate" data-aos="zoom-in"
+        data-aos-delay="200">
+        <div class="card rounded">
+          <div class="icon-box">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="orange" class="bi bi-file-earmark-text"
+              viewBox="0 0 16 16">
+              <path
+                d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z" />
+              <path
+                d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z" />
+            </svg>
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4 class="text-dark">Sed ut perspiciatis</h4>
+            <p class="description">Duis aute irure dolor in<br> reprehenderit in voluptate <br>velit esse cillum
+              dolore eu <br>fugiat nulla</br></p>
+
+        </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate" data-aos="zoom-in"
+        data-aos-delay="300">
+        <div class="card rounded">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="orange" class="bi bi-compass"
+              viewBox="0 0 16 16">
+              <path
+                d="M8 16.016a7.5 7.5 0 0 0 1.962-14.74A1 1 0 0 0 9 0H7a1 1 0 0 0-.962 1.276A7.5 7.5 0 0 0 8 16.016zm6.5-7.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+              <path d="m6.94 7.44 4.95-2.83-2.83 4.95-4.949 2.83 2.828-4.95z" />
+            </svg>
+            <h4 class="text-dark">Magni Dolores</h4>
+            <p class="description">Excepteur sint occaecat<br> cupidatat non proident, sunt<br> in culpa qui officia
+              deserunt <br>mollit anim</br></p>
+
+        </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate" data-aos="zoom-in"
+        data-aos-delay="400">
+        <div class=" card rounded">
+          <div class="icon-box ">
+            <div class="icon"><i class="bx bx-world "></i></div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="orange" class="bi bi-life-preserver"
+              viewBox="0 0 16 16">
+              <path
+                d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm6.43-5.228a7.025 7.025 0 0 1-3.658 3.658l-1.115-2.788a4.015 4.015 0 0 0 1.985-1.985l2.788 1.115zM5.228 14.43a7.025 7.025 0 0 1-3.658-3.658l2.788-1.115a4.015 4.015 0 0 0 1.985 1.985L5.228 14.43zm9.202-9.202-2.788 1.115a4.015 4.015 0 0 0-1.985-1.985l1.115-2.788a7.025 7.025 0 0 1 3.658 3.658zm-8.087-.87a4.015 4.015 0 0 0-1.985 1.985L1.57 5.228A7.025 7.025 0 0 1 5.228 1.57l1.115 2.788zM8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+            </svg>
+            <h4 class="text-dark">Nemo Enim</h4>
+            <p class="description">At vero eos et<br> accusamus et iusto<br> odio dignissimos <br>ducimus qui blanditiis
+              <br>praesentium voluptatum</br>
+            </p>
+
+        </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  </div>
+  </div>
+  </div>
+
+
+
   <script src="./styles/bootstrap-5.0.0-beta3-dist/bootstrap-5.0.0-beta3-dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
