--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <p class="text-center text-warning">_________</p>
     <div class="row">
       <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate " data-aos="zoom-in" data-aos-delay="100">
-        <div class="card rounded p-3">
+        <div class="card rounded">
           <div class="icon-box">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="orange" class="bi bi-globe2 "
               viewBox="0 0 16 16">
