--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container">
-      <a class="navbar-brand fs-1 text-white" href="#">Ninestars</a>
+      <a class="navbar-brand fs-1  text-white" href="#">Ninestars</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -141,12 +141,13 @@
   <!-- end of first section -->
 
   <!-- sevices section -->
-  <div class=" container-fluid pt-5 mt-5 color ">
+  <div class=" container-fluid pt-5 mt-5  pb-5 color ">
     <p class="fs-2 text-center text-secondary">Services</p>
     <h1 class="text-center">Check out the great services we offer</h1>
     <p class="text-center text-warning">_________</p>
-    <div class="row">
-      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate " data-aos="zoom-in" data-aos-delay="100">
+    
+    <div class="row d-flex ">
+      <div class="col-md-6 col-lg-3 text-center aos-init aos-animate  " data-aos="zoom-in" data-aos-delay="100">
         <div class="card rounded">
           <div class="icon-box">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="orange" class="bi bi-globe2 "
@@ -162,8 +163,7 @@
         </div>
       </div>
 
-      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate" data-aos="zoom-in"
-        data-aos-delay="200">
+      <div class="col-md-6 col-lg-3  text-center aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
         <div class="card rounded">
           <div class="icon-box">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="orange" class="bi bi-file-earmark-text"
@@ -178,12 +178,11 @@
             <p class="description">Duis aute irure dolor in<br> reprehenderit in voluptate <br>velit esse cillum
               dolore eu <br>fugiat nulla</br></p>
 
-        </div>
+          </div>
         </div>
       </div>
 
-      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate" data-aos="zoom-in"
-        data-aos-delay="300">
+      <div class="col-md-6 col-lg-3 text-center aos-init aos-animate" data-aos="zoom-in" data-aos-delay="300">
         <div class="card rounded">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
@@ -197,12 +196,11 @@
             <p class="description">Excepteur sint occaecat<br> cupidatat non proident, sunt<br> in culpa qui officia
               deserunt <br>mollit anim</br></p>
 
-        </div>
+          </div>
         </div>
       </div>
 
-      <div class="col-md-6 col-lg-3 d-flex text-center aos-init aos-animate" data-aos="zoom-in"
-        data-aos-delay="400">
+      <div class="col-md-6 col-lg-3 text-center aos-init aos-animate" data-aos="zoom-in" data-aos-delay="400">
         <div class=" card rounded">
           <div class="icon-box ">
             <div class="icon"><i class="bx bx-world "></i></div>
@@ -213,23 +211,17 @@
             </svg>
             <h4 class="text-dark">Nemo Enim</h4>
             <p class="description">At vero eos et<br> accusamus et iusto<br> odio dignissimos <br>ducimus qui blanditiis
-              <br>praesentium voluptatum</br>
+              
             </p>
 
-        </div>
+          </div>
         </div>
       </div>
-
     </div>
 
   </div>
-  </div>
-  </div>
-  </div>
-
-
-
+</div>
+</div>
   <script src="./styles/bootstrap-5.0.0-beta3-dist/bootstrap-5.0.0-beta3-dist/js/bootstrap.min.js"></script>
 </body>
-
 </html>
